# late_fusion_for_yolos_cpp

./: CMakeLists.txt  README.md  package.xml
config/: fusion_params.yaml  late_fusion_params.yaml
launch/: launch_fusion_node.py
src/: late_fusion_node.cpp
